--- a/index.html
+++ b/index.html
@@ -1,145 +1,253 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grup Sağanak Setlist</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-        }
-        select {
-            padding: 10px;
-            width: 100%;
-            font-size: 16px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-        #songHtmlContainer {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            background-color: #fff;
-        }
-        h1 {
-            color: #333;
-        }
-        button {
-            padding: 10px;
-            margin-top: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Grup Sağanak Setlist - Kategori & Düzenleme</title>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+<!-- TinyMCE CDN (WYSIWYG editör için) -->
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background-color: #f4f4f4;
+  }
+  select, input, textarea, button {
+    font-size: 16px;
+    padding: 8px;
+    margin: 5px 0;
+  }
+  select, input, textarea {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  #editorContainer {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    background: white;
+    min-height: 200px;
+  }
+  button {
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    color: white;
+  }
+  #transposeUpButton { background-color: #28a745; }
+  #transposeDownButton { background-color: #dc3545; }
+  #saveButton { background-color: #007bff; }
+  #addNewSongButton { background-color: #17a2b8; margin-top: 10px; }
+
+  hr {
+    margin: 30px 0;
+    border: 0; border-top: 2px solid #ccc;
+  }
+</style>
 </head>
 <body>
-    <h1>Grup Sağanak Setlist⚡</h1>
-    <select id="songsDropdown">
-        <option value="" disabled selected>Bir şarkı seçin</option>
-    </select>
-    <div id="songHtmlContainer">
-        <!-- Şarkı HTML içeriği buraya yüklenecek -->
-    </div>
 
-    <button id="transposeUpButton">1 Ton Yukarı</button>
-    <button id="transposeDownButton">1 Ton Aşağı</button>
-    <button id="saveButton">Kaydet</button>
+<h1>Grup Sağanak Setlist - Kategori & Düzenleme</h1>
 
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
-            authDomain: "saganak-24ec8.firebaseapp.com",
-            databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "saganak-24ec8",
-            storageBucket: "saganak-24ec8.firebasestorage.app",
-            messagingSenderId: "394236997954",
-            appId: "1:394236997954:web:c49ebc99d98722e31b98db",
-            measurementId: "G-S1C78RYR9Z"
-        };
+<label for="categoryDropdown"><strong>Kategori Seç:</strong></label>
+<select id="categoryDropdown">
+  <option value="all">Tüm Kategoriler</option>
+</select>
 
-        const app = firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
+<label for="songsDropdown"><strong>Şarkı Seç:</strong></label>
+<select id="songsDropdown">
+  <option value="" disabled selected>Bir şarkı seçin</option>
+</select>
 
-        const songsRef = database.ref('Songs');
-        const selectedSongRef = database.ref('selectedSong');
-        const transposedSongRef = database.ref('transposedSong'); // Transpoze edilen şarkı
+<div style="margin-top:10px;">
+  <button id="transposeUpButton">1 Ton Yukarı</button>
+  <button id="transposeDownButton">1 Ton Aşağı</button>
+  <button id="saveButton">Değişiklikleri Kaydet</button>
+</div>
 
-        const chords = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
+<!-- TinyMCE editör burada -->
+<textarea id="editorContainer"></textarea>
 
-        let currentSongHtml = "";
-        let currentSongId = "";
-        
-        function transposeChord(chord, steps) {
-            const index = chords.indexOf(chord);
-            if (index === -1) return chord;
-            const newIndex = (index + steps + chords.length) % chords.length;
-            return chords[newIndex];
+<hr>
+
+<h2>Yeni Şarkı Ekle</h2>
+<input id="newSongName" placeholder="Şarkı Adı" />
+<input id="newSongCategory" placeholder="Kategori" />
+<textarea id="newSongHtml" placeholder="Şarkı HTML içeriği" rows="8" style="width: 100%;"></textarea>
+<button id="addNewSongButton">Yeni Şarkıyı Kaydet</button>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+
+<script>
+  // Firebase konfigürasyon
+  const firebaseConfig = {
+    apiKey: "AIzaSyDAhFPe_j750iRzfv96xHAMX488sj6xBTs",
+    authDomain: "saganak-24ec8.firebaseapp.com",
+    databaseURL: "https://saganak-24ec8-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "saganak-24ec8",
+    storageBucket: "saganak-24ec8.firebasestorage.app",
+    messagingSenderId: "394236997954",
+    appId: "1:394236997954:web:c49ebc99d98722e31b98db",
+    measurementId: "G-S1C78RYR9Z"
+  };
+
+  const app = firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
+  const songsRef = database.ref('Songs');
+
+  // Akor listesi ve transpose fonksiyonları
+  const chords = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
+
+  function transposeChord(chord, step) {
+    const match = chord.match(/^([A-G]#?)(.*)$/);
+    if (!match) return chord;
+    const base = match[1];
+    const suffix = match[2];
+    const index = chords.indexOf(base);
+    if (index === -1) return chord;
+    let newIndex = (index + step + chords.length) % chords.length;
+    return chords[newIndex] + suffix;
+  }
+
+  function transposeAllChords(step) {
+    // TinyMCE'deki HTML'yi al, DOM olarak parse et
+    let content = tinymce.get('editorContainer').getContent();
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(content, 'text/html');
+
+    // span#nota'ları bul ve transpoze et
+    const spans = doc.querySelectorAll("span#nota");
+    spans.forEach(span => {
+      const chord = span.textContent.trim();
+      span.textContent = transposeChord(chord, step);
+    });
+
+    // Yeni içeriği TinyMCE'ye koy
+    tinymce.get('editorContainer').setContent(doc.body.innerHTML);
+  }
+
+  // TinyMCE başlat
+  tinymce.init({
+    selector: '#editorContainer',
+    menubar: false,
+    plugins: 'lists link',
+    toolbar: 'undo redo | bold italic underline | bullist numlist | link',
+    height: 300
+  });
+
+  // Kategorileri tutan değişken (Set ile tekrarları önler)
+  let categorySet = new Set();
+
+  // Kategorileri dropdowna doldur
+  function fillCategoryDropdown() {
+    const categoryDropdown = document.getElementById('categoryDropdown');
+    categoryDropdown.innerHTML = '<option value="all">Tüm Kategoriler</option>';
+    Array.from(categorySet).sort().forEach(cat => {
+      const opt = document.createElement('option');
+      opt.value = cat;
+      opt.textContent = cat;
+      categoryDropdown.appendChild(opt);
+    });
+  }
+
+  // Şarkıları dropdowna doldur (filtreli)
+  function fillSongsDropdown(filterCategory = 'all') {
+    const songsDropdown = document.getElementById('songsDropdown');
+    songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
+    songsRef.once('value', snapshot => {
+      const songs = snapshot.val();
+      if (!songs) return;
+      categorySet.clear();
+
+      // Önce tüm kategorileri topla
+      Object.values(songs).forEach(song => {
+        if (song.Category) categorySet.add(song.Category);
+      });
+      fillCategoryDropdown();
+
+      // Sonra filtreye göre şarkıları listele
+      Object.entries(songs).forEach(([id, song]) => {
+        if (filterCategory === 'all' || song.Category === filterCategory) {
+          const opt = document.createElement('option');
+          opt.value = id;
+          opt.textContent = song.Name + (song.Category ? ' (' + song.Category + ')' : '');
+          songsDropdown.appendChild(opt);
         }
+      });
+    });
+  }
 
-        function transposeSong(songHtml, steps) {
-            const chordRegex = /\b(A|A#|B|C|C#|D|D#|E|F|F#|G|G#)\b/g;
-            return songHtml.replace(chordRegex, (match) => {
-                return transposeChord(match, steps);
-            });
-        }
+  // Şarkı seçilince editöre yükle
+  document.getElementById('songsDropdown').addEventListener('change', e => {
+    const songId = e.target.value;
+    if (!songId) return;
+    songsRef.child(songId).once('value', snapshot => {
+      const song = snapshot.val();
+      if (!song) return;
+      // İçeriği TinyMCE'ye yükle
+      tinymce.get('editorContainer').setContent(song.Html || '');
+      // Kategori inputunu güncelle
+      document.getElementById('newSongCategory').value = song.Category || '';
+      // ID'yi bir yerde tut
+      currentSongId = songId;
+    });
+  });
 
-        function getSongs() {
-            songsRef.once('value', (snapshot) => {
-                const songs = snapshot.val();
-                const songsDropdown = document.getElementById('songsDropdown');
-                songsDropdown.innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
+  // Kategori seçilince şarkıları filtrele
+  document.getElementById('categoryDropdown').addEventListener('change', e => {
+    fillSongsDropdown(e.target.value);
+    // Seçimi sıfırla
+    document.getElementById('songsDropdown').innerHTML = '<option value="" disabled selected>Bir şarkı seçin</option>';
+    tinymce.get('editorContainer').setContent('');
+    currentSongId = null;
+    // Kategori inputu temizle
+    document.getElementById('newSongCategory').value = '';
+  });
 
-                for (const songId in songs) {
-                    const song = songs[songId];
-                    const option = document.createElement('option');
-                    option.value = songId;
-                    option.textContent = song.Name;
-                    songsDropdown.appendChild(option);
-                }
-            });
-        }
+  // Transpose butonları
+  document.getElementById('transposeUpButton').addEventListener('click', () => transposeAllChords(1));
+  document.getElementById('transposeDownButton').addEventListener('click', () => transposeAllChords(-1));
 
-        document.getElementById('songsDropdown').addEventListener('change', (event) => {
-            currentSongId = event.target.value;
-            selectedSongRef.set(currentSongId);
-        });
+  // Kaydet butonu (düzenleme kaydetme)
+  let currentSongId = null;
+  document.getElementById('saveButton').addEventListener('click', () => {
+    if (!currentSongId) {
+      alert('Lütfen önce bir şarkı seçin!');
+      return;
+    }
+    const newHtml = tinymce.get('editorContainer').getContent();
+    const newCategory = document.getElementById('newSongCategory').value.trim();
 
-        selectedSongRef.on('value', (snapshot) => {
-            const selectedSongId = snapshot.val();
-            const songRef = database.ref('Songs/' + selectedSongId);
-            songRef.once('value', (songSnapshot) => {
-                const song = songSnapshot.val();
-                currentSongHtml = song.Html;
-                document.getElementById('songHtmlContainer').innerHTML = song.Html;
-            });
-        });
+    songsRef.child(currentSongId).update({
+      Html: newHtml,
+      Category: newCategory
+    }, err => {
+      if (err) alert('Kaydetme hatası: ' + err);
+      else alert('Şarkı başarıyla güncellendi!');
+      fillSongsDropdown(document.getElementById('categoryDropdown').value);
+    });
+  });
 
-        document.getElementById('transposeUpButton').addEventListener('click', () => {
-            currentSongHtml = transposeSong(currentSongHtml, 1);
-            document.getElementById('songHtmlContainer').innerHTML = currentSongHtml;
-        });
+  // Yeni şarkı ekleme
+  document.getElementById('addNewSongButton').addEventListener('click', () => {
+    const name = document.getElementById('newSongName').value.trim();
+    const category = document.getElementById('newSongCategory').value.trim();
+    const html = document.getElementById('newSongHtml').value.trim();
 
-        document.getElementById('transposeDownButton').addEventListener('click', () => {
-            currentSongHtml = transposeSong(currentSongHtml, -1);
-            document.getElementById('songHtmlContainer').innerHTML = currentSongHtml;
-        });
+    if (!name || !html) {
+      alert('Lütfen şarkı adı ve HTML içeriğini doldurun!');
+      return;
+    }
 
-        document.getElementById('saveButton').addEventListener('click', () => {
-            transposedSongRef.set(currentSongHtml);
-            alert('Şarkı kaydedildi!');
-        });
-
-        getSongs();
-    </script>
-</body>
-</html>
+    songsRef.push({
+      Name: name,
+      Category: category,
+      Html: html,
+      CreatedAt: Date.now()
+    }, err => {
+      if (err) alert('Yeni şarkı eklenirken hata oluştu: ' + err);
+      else {
+        alert
